.metadata/.plugins/org.eclipse.cdt.ui/ADC.build.log
11:06:20 **** Incremental Build of configuration Debug for project ADC ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32C011xx -c -I../Core/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc -I../Drivers/STM32C0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32C0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:82:6: error: redefinition of 'HAL_ADC_ConvCpltCallback'
   82 | void HAL_ADC_ConvCpltCallback(ADC_HandleTypeDef *hadc) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:70:6: note: previous definition of 'HAL_ADC_ConvCpltCallback' with type 'void(ADC_HandleTypeDef *)'
   70 | void HAL_ADC_ConvCpltCallback(ADC_HandleTypeDef* hadc) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

11:06:21 Build Failed. 2 errors, 0 warnings. (took 1s.33ms)

